--- a/raft_node/Cargo.toml
+++ b/raft_node/Cargo.toml
@@ -2,6 +2,7 @@
 name = "raft_node"
 version = "0.1.0"
 edition = "2024"
+default-run = "raft_node"
 
 [dependencies]
 raft_core = { path = "../raft_core" }
@@ -12,3 +13,5 @@ bincode = "1.3.3"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 toml = "0.9.8"
+axum = "0.7.5"
+prometheus = { version = "0.13", features = ["process"] }
